// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders correctly renders with a language selector 1`] = `
<footer
  className="footer py-3 px-4 text-center"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex flex-column align-items-center"
  >
    <p
      className="footer-copyright mb-1"
    >
      © 2026 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        MOOC UI
      </a>
       - 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        LMS
      </a>
    </p>
    <p
      className="footer-trademark mb-0"
    >
      edX and MOOC UI, and the edX and MOOC UI logos are registered trademarks of 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        edX Inc.
      </a>
    </p>
    <div
      className="mt-3"
    >
      <form
        className="form-inline"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="d-inline-block m-0"
            htmlFor="site-footer-language-select"
          >
            Choose Language
          </label>
          <select
            className="form-control-sm mx-2"
            defaultValue="en"
            id="site-footer-language-select"
            name="site-footer-language-select"
          >
            <option
              value="en"
            >
              English
            </option>
            <option
              value="es"
            >
              Español
            </option>
          </select>
          <button
            className="btn btn-outline-primary btn-sm"
            data-testid="site-footer-submit-btn"
            type="submit"
          >
            Apply
          </button>
        </div>
      </form>
    </div>
  </div>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector 1`] = `
<footer
  className="footer py-3 px-4 text-center"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex flex-column align-items-center"
  >
    <p
      className="footer-copyright mb-1"
    >
      © 2026 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        MOOC UI
      </a>
       - 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        LMS
      </a>
    </p>
    <p
      className="footer-trademark mb-0"
    >
      edX and MOOC UI, and the edX and MOOC UI logos are registered trademarks of 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        edX Inc.
      </a>
    </p>
  </div>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector in es 1`] = `
<footer
  className="footer py-3 px-4 text-center"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex flex-column align-items-center"
  >
    <p
      className="footer-copyright mb-1"
    >
      © 2026 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        MOOC UI
      </a>
       - 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        LMS
      </a>
    </p>
    <p
      className="footer-trademark mb-0"
    >
      edX and MOOC UI, and the edX and MOOC UI logos are registered trademarks of 
      <a
        className="footer-link-highlight"
        href="http://localhost:18000"
        onClick={[Function]}
      >
        edX Inc.
      </a>
    </p>
  </div>
</footer>
`;

exports[`<StudioFooterHelpSectionSlot /> renders correctly 1`] = `
[
  <div
    className="m-0 mt-6 row align-items-center justify-content-center"
  >
    <div
      className="col border-top mr-2"
    />
    <button
      className="btn btn-outline-primary btn-sm"
      data-testid="helpToggleButton"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="pgn__icon pgn__icon__sm btn-icon-before"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 17h-2v-2h2v2Zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Looking for help with Studio?
      <span
        className="pgn__icon pgn__icon__sm btn-icon-after"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <div
      className="col border-top ml-2"
    />
  </div>,
  <div
    className="px-4 container-mw-xl container-fluid"
  />,
]
`;
